[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Entries/DeleteBtn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entries/TranslateEntry.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="TranslateEntry" type="HBoxContainer" groups=[
"actor_entry",
"sub_entry",
]]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActorButton" type="OptionButton" parent="."]
margin_right = 80.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 28 )
hint_tooltip = "Changes the actor that says the dialogue.
You can use (Alt+Bracket left) or (Alt+Bracket right) to change the actor rapidly"
focus_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 1
text = "Actor"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 84.0
margin_right = 680.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="SubText" type="LineEdit" parent="VBoxContainer"]
margin_right = 596.0
margin_bottom = 28.0
hint_tooltip = "The line in its original language"
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Original line"
caret_blink = true

[node name="TranslateText" type="LineEdit" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 596.0
margin_bottom = 60.0
hint_tooltip = "The line in its translated language"
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Translated line"
caret_blink = true

[node name="DeleteBtn" parent="." instance=ExtResource( 1 )]
margin_left = 664.0
margin_right = 680.0
margin_bottom = 52.0
rect_min_size = Vector2( 16, 25 )

[connection signal="text_changed" from="VBoxContainer/SubText" to="." method="_on_SubText_text_changed"]
[connection signal="pressed" from="DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
